--- a/graphics/dxsamples/Makefile
+++ b/graphics/dxsamples/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2006/08/06 05:16:50 kristerw Exp $
+# $NetBSD: Makefile,v 1.24 2006/10/13 16:40:10 drochner Exp $
 
 DISTNAME=	dxsamples-4.4.0
 CATEGORIES=	graphics
@@ -15,5 +15,4 @@ USE_TOOLS+=	gmake makeinfo
 CONFIGURE_ARGS+=	MAKEINFO=${TOOLS_PATH.makeinfo}
 USE_X11BASE=	yes
 
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
