--- a/graphics/gri/Makefile
+++ b/graphics/gri/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2006/05/15 21:55:28 joerg Exp $
+# $NetBSD: Makefile,v 1.31 2007/01/31 00:04:11 wiz Exp $
 
 DISTNAME=		gri-2.12.5
 PKGREVISION=	3
@@ -22,5 +22,4 @@ INFO_FILES=		# PLIST
 INSTALL_MAKE_FLAGS=	${MAKE_FLAGS} INFO_DIR=${PREFIX:Q}/${PKGINFODIR:Q}
 
 .include "../../devel/netcdf/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
