--- a/www/geeklog/Makefile
+++ b/www/geeklog/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/07/24 16:13:55 taca Exp $
+# $NetBSD: Makefile,v 1.12 2006/08/17 14:16:56 taca Exp $
 #
 
 DISTNAME=	geeklog-${VER}
@@ -110,6 +110,6 @@ do-install:
 .endfor
 	cd ${WRKSRC}/public_html; ${PAX} -rw . ${GEEKLOG_PUBDIR}
 
-.include "../../mk/apachever.mk"
+.include "../../mk/apache.mk"
 .include "../../lang/php/phpversion.mk"
 .include "../../mk/bsd.pkg.mk"
