--- a/net/gnetcat/Makefile
+++ b/net/gnetcat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/04/11 21:46:47 tv Exp $
+# $NetBSD: Makefile,v 1.6 2006/04/06 03:20:54 jlam Exp $
 
 DISTNAME=	netcat-0.7.1
 PKGNAME=	gnetcat-0.7.1
@@ -7,10 +7,10 @@ CATEGORIES=	net www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=netcat/}
 
 MAINTAINER=	adrianp@NetBSD.org
-HOMEPAGE= 	http://netcat.sourceforge.net/
+HOMEPAGE=	http://netcat.sourceforge.net/
 COMMENT=	Read and write data across network connections
 
 GNU_CONFIGURE=		YES
-INFO_FILES=		# PLIST
+INFO_FILES=		yes
 
 .include "../../mk/bsd.pkg.mk"
