--- a/misc/bbappconf/Makefile
+++ b/misc/bbappconf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:10:07 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2007/01/07 09:14:00 rillig Exp $
 #
 
 DISTNAME=	bbappconf-0.0.2
@@ -14,8 +14,6 @@ USE_LANGUAGES=		c c++
 USE_X11BASE=		YES
 GNU_CONFIGURE=		YES
 
-.include "../../mk/x11.buildlink3.mk"
-
 post-patch:
 	${SED} -e 's,@PREFIX@,${PREFIX},' ${WRKSRC}/data/bbappconf.1.tmp > \
 		${WRKSRC}/data/bbappconf.1
@@ -27,4 +25,9 @@ post-install:
 	${INSTALL_MAN_DIR} ${PREFIX}/${PKGMANDIR}/man1
 	${INSTALL_MAN} ${WRKSRC}/data/bbappconf.1 ${PREFIX}/${PKGMANDIR}/man1
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
