--- a/emulators/darcnes/Makefile
+++ b/emulators/darcnes/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2005/06/16 06:57:50 jlam Exp $
+# $NetBSD: Makefile,v 1.23 2006/02/05 23:09:00 joerg Exp $
 
 PKGNAME=	darcnes-20010401
 PKGREVISION=	2
@@ -16,5 +16,5 @@ do-install:
 	${INSTALL_MAN} ${WRKSRC}/readme ${PREFIX}/share/doc/darcnes
 
 .include "Makefile.common"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXaw/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
