--- a/lang/eag/Makefile
+++ b/lang/eag/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/02/05 23:09:44 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2006/10/04 21:46:13 wiz Exp $
 
 DISTNAME=		eag-2.3
 PKGREVISION=		2
@@ -15,5 +15,5 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXaw/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
