--- a/fonts/profont/Makefile
+++ b/fonts/profont/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/12/29 07:04:28 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2006/02/05 23:09:10 joerg Exp $
 #
 
 DISTNAME=	profontlinux
@@ -8,7 +8,7 @@ CATEGORIES=	fonts
 MASTER_SITES=	http://www.tobiasjung.net/dl/
 EXTRACT_SUFX=	.zip
 
-MAINTAINER=	perry@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tobias-jung.de/seekingprofont/
 COMMENT=	Monospaced bitmap font readable in very small sizes
 
