--- a/time/sunclock/Makefile
+++ b/time/sunclock/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:11:11 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/12/27 13:37:40 joerg Exp $
 #
 
 DISTNAME=	sunclock-1.5
@@ -6,7 +6,7 @@ PKGREVISION=	1
 CATEGORIES=	x11 time
 MASTER_SITES=	${MASTER_SITE_XCONTRIB:=applications/}
 
-MAINTAINER=	perry@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Show which portion of the Earth's surface is illuminated by the Sun
 
 USE_IMAKE=	yes
