--- a/x11/xcolorsel/Makefile
+++ b/x11/xcolorsel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2005/06/02 19:33:47 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2006/02/05 23:11:45 joerg Exp $
 #
 
 DISTNAME=	xcolorsel-1.1a-src
@@ -7,7 +7,7 @@ PKGREVISION=	3
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XCONTRIB:=utilities/}
 
-MAINTAINER=	perry@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Browse and select named X colors from rgb.txt
 
 WRKSRC=		${WRKDIR}/xcolorsel
