--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.93 2006/03/30 03:17:53 minskim Exp $
+# $NetBSD: Makefile,v 1.94 2006/09/03 06:28:50 dsainty Exp $
 #
 
 COMMENT=	Archivers
@@ -37,6 +37,7 @@ SUBDIR+=	libarchive
 SUBDIR+=	libcomprex
 SUBDIR+=	liblzo
 SUBDIR+=	libzip
+SUBDIR+=	lzma
 SUBDIR+=	lzo
 SUBDIR+=	lzop
 SUBDIR+=	macutil
