--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.656 2007/01/22 18:54:00 minskim Exp $
+# $NetBSD: Makefile,v 1.657 2007/02/16 12:07:55 xtraeme Exp $
 #
 
 COMMENT=	Networking tools
@@ -414,9 +414,6 @@ SUBDIR+=	slurm
 SUBDIR+=	smokeping
 SUBDIR+=	sniffit
 SUBDIR+=	snort
-SUBDIR+=	snort-mysql
-SUBDIR+=	snort-pgsql
-SUBDIR+=	snort-prelude
 SUBDIR+=	snort-rules
 SUBDIR+=	socat
 SUBDIR+=	socket++
