--- a/devel/ArX/Makefile
+++ b/devel/ArX/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/03/06 00:18:15 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2006/09/16 12:20:36 jmmv Exp $
 #
 
 DISTNAME=	ArX-1.0.20
 PKGREVISION=	6
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://superbeast.ucsd.edu/~landry/ArX/
 
 MAINTAINER=	recht@NetBSD.org
