--- a/devel/aegis/Makefile
+++ b/devel/aegis/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.14 2006/11/27 17:17:56 joerg Exp $
+# $NetBSD: Makefile,v 1.15 2006/12/01 13:54:49 joerg Exp $
 #
 
 DISTNAME=	aegis-4.22
 PKGREVISION=	2
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://aegis.sourceforge.net/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
