--- a/devel/codeville/Makefile
+++ b/devel/codeville/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2006/03/02 19:25:25 drochner Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/04 21:29:13 jlam Exp $
 
 DISTNAME=	Codeville-0.1.16
 PKGNAME=	codeville-0.1.16
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://codeville.org/download/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
