--- a/devel/cvs2html/Makefile
+++ b/devel/cvs2html/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/06/16 06:57:45 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/07/16 01:19:08 jlam Exp $
 #
 
 DISTNAME=	cvs2html-1.82
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	zuntum@NetBSD.org
