--- a/devel/cvslock/Makefile
+++ b/devel/cvslock/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2003/07/21 16:43:18 martti Exp $
+# $NetBSD: Makefile,v 1.8 2006/03/04 21:29:13 jlam Exp $
 
 DISTNAME=	cvslock-0.2
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	ftp://riemann.iam.uni-bonn.de/pub/users/roessler/cvslock/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
