--- a/devel/cvsps/Makefile
+++ b/devel/cvsps/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.18 2006/02/05 23:08:40 joerg Exp $
+# $NetBSD: Makefile,v 1.19 2007/01/07 09:13:50 rillig Exp $
 #
 
 DISTNAME=	cvsps-2.1
 PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	${HOMEPAGE}
 
 MAINTAINER=	schmonz@NetBSD.org
