--- a/devel/cvsup-bin/Makefile
+++ b/devel/cvsup-bin/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2006/03/04 21:29:13 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2007/01/07 09:13:50 rillig Exp $
 
 DISTNAME=	cvsup-static-16.1.h
 PKGNAME=	${DISTNAME:C/static/bin/}
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://motoyuki.bsdclub.org/data/NetBSD/CVSup/i386/
 EXTRACT_SUFX=	.tgz
 
