--- a/devel/cvsup/Makefile.common
+++ b/devel/cvsup/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.8 2006/01/12 18:01:15 rillig Exp $
+# $NetBSD: Makefile.common,v 1.9 2006/10/04 21:35:58 wiz Exp $
 
 DISTNAME=	cvsup-snap-16.1h
-CATEGORIES=	devel net
+CATEGORIES=	devel net scm
 MASTER_SITES=	ftp://ftp.freebsd.org/pub/FreeBSD/development/CVSup/snapshots/
 
 MAINTAINER=	motoyuki@bsdclub.org
