--- a/devel/cvsync/Makefile
+++ b/devel/cvsync/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.81 2006/02/05 23:08:41 joerg Exp $
+# $NetBSD: Makefile,v 1.82 2006/11/03 19:22:55 joerg Exp $
 #
 
 DISTNAME=	cvsync-0.24.19
 PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	ftp://ftp.cvsync.org/pub/cvsync/
 
 MAINTAINER=	gehenna@NetBSD.org
