--- a/devel/lincvs/Makefile
+++ b/devel/lincvs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.7 2006/05/22 16:51:42 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2006/08/22 15:20:02 joerg Exp $
 
 DISTNAME=		lincvs-1.4.4-0-generic-src
 PKGNAME=		${DISTNAME:S/-0-generic-src//}
 PKGREVISION=		3
-CATEGORIES=		devel x11
+CATEGORIES=		devel x11 scm
 MASTER_SITES=	        http://lincvs.com/download/
 EXTRACT_SUFX=		.tgz
 
