--- a/devel/monotone/Makefile
+++ b/devel/monotone/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.32 2006/12/31 17:38:51 jmmv Exp $
+# $NetBSD: Makefile,v 1.33 2007/01/02 11:09:57 jmmv Exp $
 #
 
 DISTNAME=	monotone-0.32
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://monotone.ca/downloads/
 
 MAINTAINER=	jmmv@NetBSD.org
