--- a/devel/p4/Makefile.common
+++ b/devel/p4/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.8 2005/05/22 22:29:50 rillig Exp $
+# $NetBSD: Makefile.common,v 1.9 2006/06/17 20:44:03 rillig Exp $
 #
 
 P4_VERS=	2002.1
 PKGNAME=	${DISTNAME}-${P4_VERS}
-CATEGORIES=	devel
+CATEGORIES=	devel p4
 MAINTAINER=	schmonz@NetBSD.org
 
 NO_CONFIGURE=	yes
