--- a/devel/p5-SVN-Mirror/Makefile
+++ b/devel/p5-SVN-Mirror/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:29:24 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2007/01/10 22:02:45 bad Exp $
 
 DISTNAME=	SVN-Mirror-0.72
 PKGNAME=	p5-${DISTNAME}
-CATEGORIES=	devel perl5
+CATEGORIES=	devel perl5 scm
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=OurNet/CLKAO/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
