--- a/devel/p5-SVN-Simple/Makefile
+++ b/devel/p5-SVN-Simple/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:08:49 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/03/04 21:29:24 jlam Exp $
 
 DISTNAME=	SVN-Simple-0.27
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	3
-CATEGORIES=	devel perl5
+CATEGORIES=	devel perl5 scm
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=OurNet/CLKAO/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
