--- a/devel/rcs/Makefile
+++ b/devel/rcs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.21 2006/07/01 22:03:12 heinz Exp $
+# $NetBSD: Makefile,v 1.22 2007/01/07 09:13:51 rillig Exp $
 #
 
 DISTNAME=		rcs-5.7
 PKGREVISION=		3
-CATEGORIES=		devel
+CATEGORIES=		devel scm
 MASTER_SITES=		${MASTER_SITE_GNU:=rcs/}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
