--- a/devel/subversion/Makefile.common
+++ b/devel/subversion/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.25 2006/11/08 11:29:14 adam Exp $
+# $NetBSD: Makefile.common,v 1.27 2007/01/25 18:15:49 epg Exp $
 
 DISTNAME=		subversion-${SVNVER}
-CATEGORIES=		devel
+CATEGORIES=		devel scm
 MASTER_SITES=		http://subversion.tigris.org/tarballs/
 
 MAINTAINER=		epg@NetBSD.org
