--- a/devel/svk/Makefile
+++ b/devel/svk/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.22 2007/01/10 22:19:15 bad Exp $
+# $NetBSD: Makefile,v 1.23 2007/01/10 23:34:08 bad Exp $
 
 DISTNAME=	SVK-v2.0.0
 PKGNAME=	svk-2.0.0
 PKGREVISION=	1
-CATEGORIES=	devel perl5
+CATEGORIES=	devel perl5 scm
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=OurNet/CLKAO/}
 
 MAINTAINER=	sommerfeld@NetBSD.org
