--- a/devel/tkcvs/Makefile
+++ b/devel/tkcvs/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.33 2006/02/05 23:08:54 joerg Exp $
+# $NetBSD: Makefile,v 1.34 2006/03/04 21:29:30 jlam Exp $
 #
 
 DISTNAME=	tkcvs_7_2_1
 PKGNAME=	tkcvs-7.2.1
 PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	http://www.twobarleycorns.net/ \
 		${MASTER_SITE_SOURCEFORGE:=tkcvs/}
 
