--- a/devel/tla/Makefile
+++ b/devel/tla/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2006/10/13 06:52:11 rillig Exp $
+# $NetBSD: Makefile,v 1.30 2006/12/20 15:30:52 joerg Exp $
 #
 
 DISTNAME=	tla-1.3.5
-CATEGORIES=	devel
+CATEGORIES=	devel scm
 MASTER_SITES=	${MASTER_SITE_GNU:=gnu-arch/}		\
 		http://www.gnuarch.org/releases/	\
 		http://www.seyza.com/gnu-releases/
