--- a/devel/p5-Test-Simple/Makefile
+++ b/devel/p5-Test-Simple/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2006/10/21 07:38:42 obache Exp $
+# $NetBSD: Makefile,v 1.30 2006/11/05 17:49:34 joerg Exp $
 
-DISTNAME=		Test-Simple-0.64
+DISTNAME=		Test-Simple-0.67
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5tsi
 CATEGORIES=		devel perl5
