--- a/devel/p5-Scalar-List-Utils/Makefile
+++ b/devel/p5-Scalar-List-Utils/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2006/01/03 17:33:46 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2006/03/04 21:29:24 jlam Exp $
 #
 
-DISTNAME=		Scalar-List-Utils-1.18
+DISTNAME=		Scalar-List-Utils-1.19
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5slu
 CATEGORIES=		misc perl5
