--- a/devel/p5-Test-Inline/Makefile
+++ b/devel/p5-Test-Inline/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2005/11/24 18:51:51 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2006/03/04 21:29:24 jlam Exp $
 
-DISTNAME=		Test-Inline-2.103
+DISTNAME=		Test-Inline-2.201
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5tin
 CATEGORIES=		devel perl5
