--- a/devel/p5-Log-Dispatch/Makefile
+++ b/devel/p5-Log-Dispatch/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.18 2006/03/04 21:29:22 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2006/11/01 13:34:30 obache Exp $
 
-DISTNAME=	Log-Dispatch-2.13
+DISTNAME=	Log-Dispatch-2.16
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5ldi
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Log/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/~drolsky/Log-Dispatch/
+HOMEPAGE=	http://search.cpan.org/dist/Log-Dispatch/
 COMMENT=	Perl module for logging messages to multiple outputs
 
 DEPENDS+=	p5-Params-Validate>=0.15:../../devel/p5-Params-Validate
