--- a/devel/p5-Tree-Simple/Makefile
+++ b/devel/p5-Tree-Simple/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2006/02/26 08:43:44 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2006/03/04 21:29:25 jlam Exp $
 #
 
-DISTNAME=	Tree-Simple-1.16
+DISTNAME=	Tree-Simple-1.17
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Tree/}
