--- a/www/p5-Apache-Test/Makefile
+++ b/www/p5-Apache-Test/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/11/23 22:19:50 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2006/04/19 17:17:24 cube Exp $
 #
 
-DISTNAME=		Apache-Test-1.28
+DISTNAME=		Apache-Test-1.29
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5apt
 CATEGORIES=		www perl5
