--- a/devel/p5-Cache-Simple-TimedExpiry/Makefile
+++ b/devel/p5-Cache-Simple-TimedExpiry/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2006/03/04 21:29:19 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2006/10/20 17:05:46 obache Exp $
 
-DISTNAME=	Cache-Simple-TimedExpiry-0.26
+DISTNAME=	Cache-Simple-TimedExpiry-0.27
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Cache/}
