--- a/misc/rpm/Makefile
+++ b/misc/rpm/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.62 2006/09/03 00:56:29 wiz Exp $
+# $NetBSD: Makefile,v 1.63 2006/10/22 06:42:43 rillig Exp $
 
 DISTNAME=	rpm-2.5.4
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.rpm.org/pub/rpm/dist/rpm-2.5.x/
 
