--- a/devel/pth/Makefile
+++ b/devel/pth/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.67 2005/11/08 17:58:18 tv Exp $
+# $NetBSD: Makefile,v 1.68 2006/03/04 21:29:26 jlam Exp $
 #
 
-DISTNAME=		pth-2.0.0
-PKGREVISION=		2
+DISTNAME=		pth-2.0.7
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GNU:=pth/}
 
